[package]
name = "rust-learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
structopt = "0.3"
proconio = "0.4.3"
tokio = { version = "1", features = ["full"] }
# featuresは機能を指定する
mini-redis = "0.4"
